...
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_password" />

            <!-- Login Button -->
            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/petroleum_green"
                android:text="INGRESAR"
                android:textColor="@color/white"
...
                app:cornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

            <TextView
                android:id="@+id/tvRegistrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="¿No tienes cuenta? Regístrate aquí"
                android:textColor="@color/petroleum_green"
                android:textSize="14sp"
...
