...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_menu_decorative"
                    app:shapeAppearanceOverlay="@style/CircleImage"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/tv_greeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/greeting_user"
                    android:textColor="@color/white"
                    android:textSize="16sp"
...
